[gd_scene load_steps=20 format=2]

[ext_resource path="res://sprites/NovelElements/Oleg.png" type="Texture" id=1]
[ext_resource path="res://sprites/NovelElements/SkipButton.png" type="Texture" id=2]
[ext_resource path="res://sprites/NovelElements/DialogBG.png" type="Texture" id=3]
[ext_resource path="res://fonts/MPLUSRounded1c/MPLUSRounded1c-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/NovelElements/Gennadiy.png" type="Texture" id=5]
[ext_resource path="res://sprites/NovelElements/CityBG.png" type="Texture" id=6]
[ext_resource path="res://sprites/NovelElements/AssembleLine_Unlocked.png" type="Texture" id=7]
[ext_resource path="res://sprites/NovelElements/EnigneerHouse.png" type="Texture" id=8]
[ext_resource path="res://scenes/GameField.tscn" type="PackedScene" id=9]
[ext_resource path="res://sprites/NovelElements/InteractBG.png" type="Texture" id=10]
[ext_resource path="res://scenes/ui/OrderList.tscn" type="PackedScene" id=11]
[ext_resource path="res://orders/order_tutotrials/order_tutorial_1.tres" type="Resource" id=12]
[ext_resource path="res://sprites/NovelElements/EnigneerHouse_Unlocked.png" type="Texture" id=13]
[ext_resource path="res://sprites/NovelElements/AssembleLine.png" type="Texture" id=14]
[ext_resource path="res://sprites/NovelElements/QuestConditionsButton.png" type="Texture" id=15]
[ext_resource path="res://scripts/Novel/Chapter2.gd" type="Script" id=16]
[ext_resource path="res://sprites/NovelElements/SkipButton_Pressed.png" type="Texture" id=17]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 96
font_data = ExtResource( 4 )

[node name="Chapter2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )

[node name="F1" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="F1"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="Text" type="Label" parent="F1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -496.0
margin_top = -83.0
margin_right = 496.0
margin_bottom = 209.0
custom_colors/font_color = Color( 0, 0.345098, 0.415686, 1 )
custom_fonts/font = SubResource( 1 )
text = "Теперь мне бы хотелось познакомить вас с этим гением, с человеком-чертежом. Вашему вниманию представляется Генадий!"
align = 1
valign = 1
autowrap = true

[node name="SkipButton" type="TextureButton" parent="F1"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -214.0
margin_top = 161.0
margin_right = 170.0
margin_bottom = 260.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 17 )

[node name="Character" type="TextureRect" parent="F1"]
margin_left = 231.0
margin_top = 121.0
margin_right = 538.0
margin_bottom = 474.0
texture = ExtResource( 1 )

[node name="NextButton" type="TextureButton" parent="F1"]
anchor_top = 0.326
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.0800171

[node name="F2" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="F2"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="Text" type="Label" parent="F2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -496.0
margin_top = -83.0
margin_right = 496.0
margin_bottom = 209.0
custom_colors/font_color = Color( 0, 0.345098, 0.415686, 1 )
custom_fonts/font = SubResource( 1 )
text = "Здравствуй! Я Геннадий, как вы уже поняли, я люблю чертить."
align = 1
valign = 1
autowrap = true

[node name="SkipButton" type="TextureButton" parent="F2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -214.0
margin_top = 161.0
margin_right = 170.0
margin_bottom = 260.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 17 )

[node name="Character" type="TextureRect" parent="F2"]
margin_left = 1477.0
margin_top = 225.0
margin_right = 1733.0
margin_bottom = 484.0
texture = ExtResource( 5 )

[node name="NextButton" type="TextureButton" parent="F2"]
anchor_top = 0.326
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.0800171

[node name="F3" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="F3"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="Text" type="Label" parent="F3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -496.0
margin_top = -83.0
margin_right = 496.0
margin_bottom = 209.0
custom_colors/font_color = Color( 0, 0.345098, 0.415686, 1 )
custom_fonts/font = SubResource( 1 )
text = "У меня куча дел. Я и тут, и сям! Для работы мне нужны канцелярские принадлежности. Будет просто невероятно, если вы их мне найдете!"
align = 1
valign = 1
autowrap = true

[node name="SkipButton" type="TextureButton" parent="F3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -214.0
margin_top = 161.0
margin_right = 170.0
margin_bottom = 260.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 17 )

[node name="Character" type="TextureRect" parent="F3"]
margin_left = 1477.0
margin_top = 225.0
margin_right = 1733.0
margin_bottom = 484.0
texture = ExtResource( 5 )

[node name="NextButton" type="TextureButton" parent="F3"]
anchor_top = 0.326
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.0800171

[node name="F4" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="F4"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )

[node name="Character" type="TextureRect" parent="F4"]
margin_left = 1466.0
margin_top = 216.0
margin_right = 1773.0
margin_bottom = 569.0
texture = ExtResource( 1 )

[node name="Text" type="Label" parent="F4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -717.0
margin_top = 60.0
margin_right = 692.0
margin_bottom = 333.0
custom_colors/font_color = Color( 0, 0.345098, 0.415686, 1 )
custom_fonts/font = SubResource( 3 )
text = "Выбери, восстановленную тобой, сборочную линию"
align = 1
valign = 1
autowrap = true

[node name="NextButton" type="TextureButton" parent="F4"]
margin_left = 933.0
margin_top = 153.0
margin_right = 1280.0
margin_bottom = 395.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )

[node name="EngineerHouse" type="TextureRect" parent="F4"]
margin_left = 648.0
margin_top = 93.0
margin_right = 876.0
margin_bottom = 399.0
texture = ExtResource( 8 )

[node name="F5" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="F5"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )

[node name="Text" type="Label" parent="F5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -862.0
margin_top = -76.0
margin_right = -521.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0, 0.345098, 0.415686, 1 )
custom_fonts/font = SubResource( 1 )
text = "Соедини элементы"
align = 1
valign = 1
autowrap = true

[node name="F6" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="F6"]
self_modulate = Color( 0.886275, 0.886275, 0.886275, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )

[node name="Text" type="Label" parent="F6"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -862.0
margin_top = -76.0
margin_right = -521.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0, 0.345098, 0.415686, 1 )
custom_fonts/font = SubResource( 1 )
text = "Предмет 
на поле"
align = 1
valign = 1
autowrap = true

[node name="F7" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="F7"]
self_modulate = Color( 0.886275, 0.886275, 0.886275, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )

[node name="Text" type="Label" parent="F7"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -720.0
margin_top = 301.0
margin_right = -379.0
margin_bottom = 448.0
custom_colors/font_color = Color( 0, 0.345098, 0.415686, 1 )
custom_fonts/font = SubResource( 1 )
text = "Нажми кнопку Отдать"
align = 1
valign = 1
autowrap = true

[node name="OrderList" parent="F7" instance=ExtResource( 11 )]
margin_left = 110.0
margin_top = 330.0
margin_right = 1142.0
margin_bottom = 781.0
order_datapack = ExtResource( 12 )

[node name="F8" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="F8"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )

[node name="Text" type="Label" parent="F8"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -496.0
margin_top = -83.0
margin_right = 496.0
margin_bottom = 209.0
custom_colors/font_color = Color( 0, 0.345098, 0.415686, 1 )
custom_fonts/font = SubResource( 1 )
text = "Все замечательно, но тебе сложно 
будет работать без стола, я так думаю. 
У Геннадия есть лишний"
align = 1
valign = 1
autowrap = true

[node name="SkipButton" type="TextureButton" parent="F8"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -214.0
margin_top = 161.0
margin_right = 170.0
margin_bottom = 260.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 17 )

[node name="Character" type="TextureRect" parent="F8"]
margin_left = 231.0
margin_top = 121.0
margin_right = 538.0
margin_bottom = 474.0
texture = ExtResource( 1 )

[node name="NextButton" type="TextureButton" parent="F8"]
anchor_top = 0.326
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.0800171

[node name="F9" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="F9"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )

[node name="Character" type="TextureRect" parent="F9"]
margin_left = 1466.0
margin_top = 216.0
margin_right = 1773.0
margin_bottom = 569.0
texture = ExtResource( 1 )

[node name="Text" type="Label" parent="F9"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -717.0
margin_top = 60.0
margin_right = 692.0
margin_bottom = 333.0
custom_colors/font_color = Color( 0, 0.345098, 0.415686, 1 )
custom_fonts/font = SubResource( 3 )
text = "Выбери дом инженера"
align = 1
valign = 1
autowrap = true

[node name="NextButton" type="TextureButton" parent="F9"]
margin_left = 648.0
margin_top = 93.0
margin_right = 876.0
margin_bottom = 399.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 13 )

[node name="AssembleLine" type="TextureRect" parent="F9"]
margin_left = 933.0
margin_top = 153.0
margin_right = 1280.0
margin_bottom = 395.0
texture = ExtResource( 14 )

[node name="F10" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="F10"]
self_modulate = Color( 0.886275, 0.886275, 0.886275, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )

[node name="Text" type="Label" parent="F10"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -862.0
margin_top = -76.0
margin_right = -521.0
margin_bottom = 71.0
custom_colors/font_color = Color( 0, 0.345098, 0.415686, 1 )
custom_fonts/font = SubResource( 1 )
text = "Нажми дважды на стол на игровом поле"
align = 1
valign = 1
autowrap = true

[node name="Button" type="TextureRect" parent="F10"]
margin_left = 80.0
margin_top = 70.0
margin_right = 258.0
margin_bottom = 240.0
texture = ExtResource( 15 )

[node name="F11" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="TextureRect" parent="F11"]
self_modulate = Color( 0.886275, 0.886275, 0.886275, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )

[node name="Text" type="Label" parent="F11"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -85.0
margin_right = -448.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0, 0.345098, 0.415686, 1 )
custom_fonts/font = SubResource( 1 )
text = "Нажми на планшет в правом углу экрана"
align = 1
valign = 1
autowrap = true

[node name="Button" type="Button" parent="F11"]
margin_left = 80.0
margin_top = 70.0
margin_right = 258.0
margin_bottom = 240.0
icon = ExtResource( 15 )
flat = true

[node name="GameField" parent="." instance=ExtResource( 9 )]
visible = false
margin_top = -461.0
margin_bottom = 489.0

[connection signal="pressed" from="F1/SkipButton" to="." method="_on_SkipButtonF1F2F3_pressed"]
[connection signal="pressed" from="F1/NextButton" to="." method="_on_NextButtonF1_pressed"]
[connection signal="pressed" from="F2/SkipButton" to="." method="_on_SkipButtonF1F2F3_pressed"]
[connection signal="pressed" from="F2/NextButton" to="." method="_on_NextButtonF2_pressed"]
[connection signal="pressed" from="F3/SkipButton" to="." method="_on_SkipButtonF1F2F3_pressed"]
[connection signal="pressed" from="F3/NextButton" to="." method="_on_NextButtonF3_pressed"]
[connection signal="pressed" from="F4/NextButton" to="." method="_on_NextButtonF4_pressed"]
[connection signal="visibility_changed" from="F6" to="." method="_on_F6_visibility_changed"]
